--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,38 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="success">
     <ion-title>
-      Blank
+      <img src="assets/images/logo.png" alt="Image of logo" />
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="addChecklist()">
+        <ion-icon slot="icon-only" name="add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title color="light" size="large">Your lists</ion-title>
     </ion-toolbar>
   </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-list lines="none">
+      <ion-item-sliding *ngFor="let checklist of checklists">
+        <ion-item routerLink="/checklists/{{checklist.id}}" routerDirection="forward">
+          <ion-label>{{checklist.title}}</ion-label>
+          <span>{{checklist.items.length}} items</span>
+        </ion-item>
+        <ion-item-options side="end">
+          <ion-item-option color="light">
+            <ion-icon slot="icon-only" (click)="renameChecklist(checklist)" name="clipboard"></ion-icon>
+          </ion-item-option>
+          <ion-item-option color="danger">
+            <ion-icon slot="icon-only" (click)="removeChecklist(checklist)" name="trash"></ion-icon>
+          </ion-item-option>
+        </ion-item-options>
+      </ion-item-sliding>
+    </ion-list>
   </div>
 </ion-content>
